--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Felicity Jones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Curriculum vitae Felicity Jones" />
-    <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
+    <meta name="description" content="Curriculum vitae Alvaro José Carreira" />
+    <meta name="keywords" content="curriculo, vitae, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Felicity <span>Jones</span></div></a>
+            <a href="index.html#home"><div class="site-title">Álvaro  <span>José Carreira</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -65,7 +65,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Felicity Jones</div>
+          <div class="mobile-site-title">Álvaro José Carreira </div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -94,13 +94,13 @@
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Felicity Jones</h1>
+                        <h1>Álvaro José Carreira/h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Web Designer</div>
+                            <div class="sp-subtitle">Desenvolvedor de Software</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Frontend-developer</div>
+                            <div class="sp-subtitle"></div>//
                           </div>
                         </div>
                       </div>
@@ -122,8 +122,7 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá! Eu sou a Felicity Jones. Gosto de gatos, video games e programação. Aqui você irá encontrar algumas outras
-                        informações sobre mim.</p>
+                        <p> Desenvolvedor de Software, formado em Tecnologia de Jogos Digitais. </p>
                       </div>
                       <div class="download-resume">
                         <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
@@ -132,11 +131,11 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">29</span></li>
+                        <li><span class="title">Idade</span><span class="value">40</span></li>
                         <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
-                        <li><span class="title">Cidade/Estado</span><span class="value">São Paulo, SP</span></li>
-                        <li><span class="title">E-mail</span><span class="value">felicity@geekuniversity.com.br</span></li>
-                        <li><span class="title">Fone</span><span class="value">+5511 123 456 789</span></li>
+                        <li><span class="title">Cidade/Estado</span><span class="value">Santo André, SP</span></li>
+                        <li><span class="title">E-mail</span><span class="value"></span></li>
+                        <li><span class="title">Fone</span><span class="value"></span></li>
                         <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
                       </ul>
                     </div>
@@ -165,9 +164,9 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
+                            <h4 class="item-title">Curso de Especialização</h4>
+                            <span class="item-period">2025</span>
+                            <span class="item-small"> Udemy</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Education 1 -->
@@ -200,32 +199,32 @@
                         </div>
 
                         <div class="timeline">
-                          <!-- Experience 1 -->
+                          <!-- Experience 1 
                           <div class="timeline-item">
                             <h4 class="item-title">Frontend-developer</h4>
                             <span class="item-period">Dec 2012 - Current</span>
                             <span class="item-small">Web Agency</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
-                          <!-- / Experience 1 -->
+                          / Experience 1 -->
 
-                          <!-- Experience 2 -->
+                          <!-- Experience 2 
                           <div class="timeline-item">
                             <h4 class="item-title">Web Designer</h4>
                             <span class="item-period">Dec 2011 - Nov 2012</span>
                             <span class="item-small">Apple Inc.</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
-                          <!-- / Experience 2 -->
+                          / Experience 2 -->
 
-                          <!-- Experience 3 -->
+                          <!-- Experience 3 
                           <div class="timeline-item">
                             <h4 class="item-title">Graphic Designer</h4>
                             <span class="item-period">Jan 2010 - Dec 2011</span>
                             <span class="item-small">Apple Inc.</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
-                          <!-- / Experience 3 -->
+                          / Experience 3 -->
                         </div>
                       </div>
                     </div>
@@ -235,7 +234,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Design <span>Skills</span></h3>
+                         <!-- <h3>Design <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
@@ -256,7 +255,7 @@
                         </div>
 
                       </div>
-                    </div>
+                    </div> 
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
@@ -283,7 +282,7 @@
                         
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                   <!-- Download Resume Button -->
                   <div class="row">
