--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Álvaro José Carreira/h1>
+                        <h1>Álvaro José Carreira </h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
                             <div class="sp-subtitle">Desenvolvedor de Software</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle"></div>//
+                            <div class="sp-subtitle"></div>
                           </div>
                         </div>
                       </div>
