Mais mudanças no Currículo Online

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Felicity Jones</title>
+    <title>Álvaro José Carreira </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Curriculum vitae Alvaro José Carreira" />
+    <meta name="description" content="Curriculum vitae Álvaro José Carreira" />
     <meta name="keywords" content="curriculo, vitae, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -65,7 +65,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Álvaro José Carreira </div>
+          <div class="mobile-site-title">Álvaro José Carreira</div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -94,14 +94,14 @@
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Álvaro José Carreira </h1>
+                        <h1 Álvaro José Carreira></h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
                             <div class="sp-subtitle">Desenvolvedor de Software</div>
                           </div>
-                          <div class="item">
+                         <!--<div class="item">
                             <div class="sp-subtitle"></div>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
 
